# statutory-qa

./: .gitignore  README.md  mypy.ini  pyproject.toml
.github/workflows/: main.yml
statutory_qa/: main.py
tests/: test_main.py
tests/Documents/docCollection1/11/: 1.tif
tests/Documents/docCollection1/12/: 1.tif
tests/Documents/docCollection1/13/: 1.tif
tests/Documents/docCollection1/15/: 1.tif
tests/Documents/docCollection1/2/: 1.tif  2.tif  3.tif
tests/Documents/docCollection1/3/: 1.jp2
tests/Documents/docCollection1/4/: 1.jp2
tests/Documents/docCollection1/5/: 1.jp2
tests/Documents/docCollection1/6/: 1.jp2
tests/Documents/docCollection1/7/: 1.tif
tests/Documents/docCollection1/8/: 1.tif
tests/Documents/docCollection1/99999991/: 1.tif
tests/Documents/docCollection1/99999992/: 1.tif
tests/Indices/: archiveIndex.xml  contextDocumentationIndex.xml  docIndex.xml  fileIndex.xml  tableIndex.xml
