[tool.poetry]
name = "statutory-qa"
version = "0.1.1"
description = ""
authors = ["Thomas <oeth@aarhus.dk>"]
readme = "README.md"
packages = [{include = "statutory_qa"}]
include = ["pyproject.toml"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.scripts]
statutory-qa = "statutory_qa.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
