[tool.poetry]
name = "statutory-qa"
version = "0.1.1"
description = ""
authors = ["Thomas <oeth@aarhus.dk>"]
readme = "README.md"
packages = [{include = "statutory_qa"}]
include = ["pyproject.toml"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.scripts]
statutory-qa = "statutory_qa.main:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^22.10.0"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
